force-app/main/default/objects/Conga__c/Conga__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Conga</label>
</CustomObject>