force-app/main/default/objects/Conga__c/fields/High_Performance_Investment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>High_Performance_Investment_Schedule__c</fullName>
    <label>High Performance Investment Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>