force-app/main/default/objects/Conga__c/fields/Investment_Schedule_Query__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_Query__c</fullName>
    <label>Investment Schedule Query</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>