force-app/main/default/objects/Conga__c/fields/Investment_Schedule_Query_Single__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_Query_Single__c</fullName>
    <label>Investment Schedule Query (Single)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>