force-app/main/default/objects/Conga__c/fields/Investment_Schedule_Sport_NZ_Template__c.field-meta.xml
<CustomField>
    <fullName>Investment_Schedule_Sport_NZ_Template__c</fullName>
    <label>Investment Schedule - Sport NZ Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>