force-app/main/default/objects/Conga__c/fields/Partner_Team_Report_Query__c.field-meta.xml
<CustomField>
    <fullName>Partner_Team_Report_Query__c</fullName>
    <label>Partner Team Report Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>