force-app/main/default/objects/Conga__c/fields/Partner_Team_Report_Template__c.field-meta.xml
<CustomField>
    <fullName>Partner_Team_Report_Template__c</fullName>
    <label>Partner Team Report Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>