force-app/main/default/objects/Conga__c/fields/Risk_Report_Query__c.field-meta.xml
<CustomField>
    <fullName>Risk_Report_Query__c</fullName>
    <label>Risk Report Query</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>