force-app/main/default/objects/Conga__c/fields/Service_Contract_Query__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Query__c</fullName>
    <label>Service Contract Query</label>
    <length>100</length>
    <type>Text</type>
</CustomField>