force-app/main/default/objects/Conga__c/fields/Service_Contract_Template_Short__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Template_Short__c</fullName>
    <label>Service Contract Template Short</label>
    <length>100</length>
    <type>Text</type>
</CustomField>