force-app/main/default/objects/Conga__c/fields/Summary_Partner_Team_Report_Template__c.field-meta.xml
<CustomField>
    <fullName>Summary_Partner_Team_Report_Template__c</fullName>
    <label>Summary Partner Team Report Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>